# 4DDEV-project

./: .env.example  .gitattributes  .gitignore  .wslconfig  README.md  docker-compose-dev-prod.yaml  docker-compose-dev.yaml
airflow/: Dockerfile
airflow/dags/: collect_location_zone_dag.py  collect_taxi_dag.py  collect_weather_streaming_dag.py  load_weather_dag.py  process_taxi_trips_dag.py  process_weather_dag.py  spark_transform_taxi.py  weather_fake_dag.py
airflow/scripts/: collecte_api_weather.py  collecte_taxi_trips.py  spark_streaming_transform_weather.py  spark_streaming_transform_weather_parquet.py  spark_transform_taxi.py  spark_weather_bdd.py
dbt/: Dockerfile  pyproject.toml
dbt/analytics/: dbt_project.yml  profiles.yml
dbt/analytics/models/: high_value_customers.sql  source_dim_weather.sql  source_fact_taxi_trips.sql  sources.yml  trip_enriched.sql  trip_summary_per_hour.sql
dbt/analytics/models/marts/: high_value_customers.sql  trip_enriched.sql  (+1 more)
docs/: .$schéma_ddl.drawio.bkp  schéma_ddl.drawio
marimo-analytics/: Dockerfile  README.md  pyproject.toml
marimo-analytics/scripts/: analyse_exploratoire.py  exploration.py
marimo-analytics/scripts/__marimo__/session/: analyse_exploratoire.py.json  exploration.py.json
postgres/: create_dwh_tables.sql
postgres/init/: init_databases.sql
spark/: Dockerfile
spark/scripts/: collecte_api_weather.py  collecte_taxi_trips.py  spark_streaming_transform_weather.py  spark_streaming_transform_weather_parquet.py  spark_transform_taxi.py  spark_weather_bdd.py
tmp/: dim_weather.csv
